--- a/lesson11/css/index-css/large.css
+++ b/lesson11/css/index-css/large.css
@@ -1,42 +1,31 @@
 @media only screen and (min-width: 60em) {
 
-/* ---------- cards ---------- */
+  /* ---------- cards ---------- */
 
-.container {
-  position: relative;
-  max-width: 960px;
-}
+  div.container {
+    max-width: 900px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
 
-div.card {
-  display: flex;
-  flex-direction: row;
-  margin: 15px;
-}
+    grid-template-columns: 1fr 1fr 1fr;
 
-div.card:nth-child(odd) {
-  flex-direction: row-reverse;
-}
+    margin-bottom: 10px;
+    gap: 10px 10px;
 
-div section {
-  border: 20px solid #bfcc94;
-  box-shadow: inset 0px 0px 0px 10px #b4cded;
-  box-sizing: border-box;
-  flex-grow: 1;
 
-}
+  }
 
-div section p {
-  text-align: center;
-  margin: 5px;
-}
+  div.card {
+    display: inline;
+    width: 300px;
+    height: 100%;
+  
+  }
 
-section h2 {
-  padding-top: 15px;
-}
-
-h3 {
-  padding: 25px;
-  margin: 0;
-}
-
+  div.card img {
+    height:auto;
+    max-width: 100%;
+    
+  }
 }
