--- a/lesson11/css/index-css/small.css
+++ b/lesson11/css/index-css/small.css
@@ -26,32 +26,45 @@ main div picture.hero-ph img {
 
 /* ---------- cards ---------- */
 
-.container {
-  position: relative;
-  max-width: 960px;
+div.container {
+
+  display: grid;
+  align-items: center;
+  justify-content: center;
+
+  grid-template-rows: 1fr;
+
+  margin-bottom: 10px;
+  gap: 10px 10px;
+
 }
 
 div.card {
-  display: flex;
-  flex-direction: row;
-  margin: 15px;
+  width: 300px;
+  height: 100%;
+
+  border: 20px solid #bfcc94;
+  box-shadow: inset 0px 0px 0px 10px #b4cded;
+  box-sizing: border-box;
 }
 
-div.card:nth-child(odd) {
-  flex-direction: row-reverse;
+div.card img {
+  width: 95%;
+  margin: 0 auto;
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+  position: relative;
+  z-index: -1;
 }
 
-div section {
-   border: 20px solid #bfcc94;
-   box-shadow: inset 0px 0px 0px 10px #b4cded;
-   box-sizing: border-box;
-   flex-grow: 1;
-  
-}
 
 div section p {
   text-align: center;
   margin: 5px;
+  margin-bottom: 15px;
 }
 
 section h2 {
