--- a/lesson11/css/thanks-page.css
+++ b/lesson11/css/thanks-page.css
@@ -1,8 +1,17 @@
 
 .thanks {
-  background-color: #bfcc94;
+ 
+  max-width: 960px;
+  margin: 0 auto;
+
   padding: 15px;
   text-align: center;
+
+   border: 20px solid #bfcc94;
+   box-shadow: inset 0px 0px 0px 10px #b4cded;
+   box-sizing: border-box;
+
+   margin-top: 15px; 
 }
 
 /* ---------- video ---------- */
