--- a/delcitychamberofcommerce/css/small.css
+++ b/delcitychamberofcommerce/css/small.css
@@ -1,18 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@600&family=Spectral:wght@300&display=swap');
 
 root {
-  /* background-color: #E6EBE0; */
+  background-color: #E6EBE0;
+  font-family: 'Spectral', serif;
+  margin: 0 auto;
 }
+
+/* ---------- nav ---------- */
+
 
 header {
-  background-color: #E6EBE0;
+  background-color: #F4F1BB;
+  font-family: 'Karla', sans-serif;
 }
+
+
+/* ---------- nav ---------- */
+
 
 nav {
-  background-color: #F4F1BB;
+  
 }
 
-footer, footer a {
+/* ---------- hero img ---------- */
+
+.hero-container {
+  margin: 10px auto;
+  position: relative;
+  max-width: 960px;
+}
+
+
+main div picture.hero {
+  display: block;
+  width: 96%;
+  margin: 0 2%;
+}
+
+main div picture.hero img {
+  width: 100%;
+  padding-bottom: 15px;
+}
+
+
+
+/* ---------- footer ---------- */
+
+footer,
+footer a {
   background-color: #5D576B;
   color: #F4F1BB;
+}
+
+footer {
+  padding: 15px;
 }
