--- a/delcitychamberofcommerce/css/small.css
+++ b/delcitychamberofcommerce/css/small.css
@@ -8,12 +8,16 @@ body {
 
 /* ---------- header, nav, footer ---------- */
 
-header, footer,
+header,
+footer,
 footer a {
-  background-color: #5D576B;
-  color: #E6EBE0;
   display: flex;
   font-family: 'Karla', sans-serif;
+}
+
+footer {
+  background-color: #5D576B;
+  color: white;
 }
 
 header {
@@ -31,18 +35,19 @@ header img {
 
 section {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   padding: 15px;
 }
 
-h1, h1 ~ p {
+h1,
+h1~p {
   padding-left: 15px;
   padding-bottom: 10px;
   margin: 0 auto;
 }
 
-h1 ~ p {
- font-size: 1.5rem;
+h1~p {
+  font-size: 1.5rem;
 }
 
 
@@ -51,9 +56,8 @@ footer {
 }
 
 nav {
-  background-color: #5D576B;
   display: flex;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
 
 }
@@ -75,7 +79,7 @@ nav {
 
 .navigation a {
   display: block;
-  color: #E6EBE0;
+  color: white;
   padding: 12px;
   text-align: center;
   text-decoration: none;
@@ -83,10 +87,10 @@ nav {
 }
 
 .navigation li:hover {
-    background-color: #F4F1BB;
-    color: #5D576B;
-    font-size: 1.25rem;
-    font-weight: bold;
+  background-color: #F4F1BB;
+  color: #5D576B;
+  font-size: 1.25rem;
+  font-weight: bold;
 }
 
 .navigation li a:hover {
@@ -109,23 +113,26 @@ nav {
 
 /* ---------- div(s) ---------- */
 
-.first {
-  background-color: #E1E7DA;
+.sub-title {
+  background-color: #5D576B;
+  color: white;
+  padding: 15px;
+  font-size: 1.5rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.second {
+.odd {
   background-color: #E0DDE3;
 }
-.third {
-  background-color: #DAE7E6;
-}
-.forth {
-  background-color: #F6F5CB;
+
+.even {
+  background-color: white;
 }
 
 
 /* ---------- hero img ---------- */
-
-
 
 .hero-container {
   margin: 10px auto;
@@ -164,7 +171,7 @@ h4,
 h5,
 h6 {
   font-family: 'Karla', sans-serif;
- 
-  justify-content:center;
+
+  justify-content: center;
   align-items: center;
 }
