--- a/delcitychamberofcommerce/css/small.css
+++ b/delcitychamberofcommerce/css/small.css
@@ -22,7 +22,7 @@ footer {
 
 header {
   padding: 15px;
-  justify-content: center;
+  justify-content: space-around;
 
 }
 
@@ -79,7 +79,7 @@ nav {
 
 .navigation a {
   display: block;
-  color: white;
+  color: #5D576B;
   padding: 12px;
   text-align: center;
   text-decoration: none;
@@ -110,8 +110,56 @@ nav {
   display: block;
 }
 
+/* ---------- footer ---------- */
+
+footer {
+  justify-content: space-around;
+  clear: both;
+}
+
+footer img {
+  /* background-color: #bfcc94; */
+  margin: 5px;
+  border-radius: 5px;
+}
+
+footer div.cry-media {
+  margin-left: 15px;
+  padding: 5px;
+  flex-flow: column;
+}
+
+footer div.vcard a {
+  color: #b4cded;
+}
+
+footer div.vcard a:hover {
+  color: #bfcc94;
+}
+
+/* ---------- heading ---------- */
+
+h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 15px;
+
+  font-size: 2rem;
+}
+
+/* ---------- button ---------- */
+
+button {
+  margin-bottom: 15px;
+}
 
 /* ---------- div(s) ---------- */
+
+div p {
+  padding-left: 15px;
+}
 
 .sub-title {
   background-color: #5D576B;
@@ -172,6 +220,108 @@ h5,
 h6 {
   font-family: 'Karla', sans-serif;
 
+  display: flex;
   justify-content: center;
   align-items: center;
 }
+
+h3 {
+ padding: 15px;
+
+}
+
+/* ---------- cards ---------- */
+
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 400px;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color:#7C8C94;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+/* ---------- form ---------- */
+
+.membershipForm {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+}
+
+fieldset {
+  margin: 0 auto;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  max-width: 85%;
+
+}
+
+label.top {
+  display: block;
+  padding-top: 1rem;
+}
+
+label.top input,
+label.top textarea,
+label[for="fee"] {
+  display: block;
+  border-radius: 4px;
+  padding: .75rem 0;
+  width: 100%;
+  max-width: 20rem;
+}
+
+#top {
+  padding-top: 15px;
+}
+
+.reportBtn {
+  max-width: 20rem;
+  border-radius: .5rem;
+  background-color: #ED6A5A;
+  color: white;
+  font-weight: bold;
+  letter-spacing: .1em;
+  padding: 5px;
+  border-color: gray;
+  font-family: 'Karla', sans-serif;
+}
+
+input[type="radio"] {
+  width: 25px;
+  height: 25px;
+  margin: .5em;
+}
+
